# DaneJoeLogger

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
cmake/: DaneJoeLoggerConfig.cmake.in  danejoe_install_export.cmake
include/danejoe/logger/: async_logger.hpp  i_logger.hpp  logger_manager.hpp
include/danejoe/version/: logger_version.h.in
include/log/: danejoe_logger.hpp  i_logger.hpp  manage_logger.hpp
include/logger/: async_logger.hpp  logger_manager.hpp
include/util/: process_util.hpp  time_util.hpp
include/version/: logger_version.h.in
source/danejoe/logger/: async_logger.cpp  i_logger.cpp  logger_manager.cpp
source/log/: danejoe_logger.cpp  i_logger.cpp  manage_log.cpp
source/logger/: async_logger.cpp  i_logger.cpp  logger_manager.cpp
source/test/: main.cpp
source/util/: process_util.cpp  time_util.cpp  util_process.cpp
tests/: CMakeLists.txt
tests/include/: demo_logger.hpp
tests/source/: demo_logger.cpp  main.cpp
